# semsql

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPRECATED-0.1.md  DEPS.md  PLAN.md  RELEASING.md  ROADMAP.md  SPECS.md
examples/: fastapi_demo.py  person_org_demo.py
src/ontomodel/: __init__.py  _meta.py  decorator.py  fields.py  jsonld.py  mixin.py  rdf.py
src/ontomodel/fastapi/: __init__.py  negotiate.py  responses.py
src/ontosql/: __init__.py  _meta.py  decorator.py  fields.py  jsonld.py  mixin.py  rdf.py
src/ontosql/compile/: __init__.py  plan.py  select.py
src/ontosql/export/: _formats.py
src/ontosql/fastapi/: __init__.py  negotiate.py  responses.py
src/ontosql/mapping/: __init__.py  map.py  mapper.py  registry.py
src/ontosql/query/: __init__.py  expr.py
src/ontosql/semantic/: __init__.py  meta.py  model.py
src/ontosql/session/: __init__.py  async_session.py  base.py  hydrate.py  sync.py
src/semsql/: __init__.py  _meta.py  decorator.py  fields.py  jsonld.py  mixin.py  rdf.py  registry.py
src/semsql/fastapi/: __init__.py  negotiate.py  responses.py
tests/: conftest.py  models.py  test_compile.py  test_coverage_final.py  test_coverage_full.py  test_coverage_gaps.py  test_coverage_v02.py  test_coverage_v02_extra.py  test_decorator.py  test_decorator_errors.py  test_export_formats.py  test_fastapi.py  test_fastapi_errors.py  test_fastapi_responses_extra.py  test_fields.py  test_fields_extra.py  test_iri_fallback.py  test_jsonld.py  test_jsonld_advanced.py  test_jsonld_types.py  test_mapping.py  test_meta.py  test_mixin.py  test_mixin_errors.py  test_negotiate.py  test_query.py  test_rdf.py  test_registry.py  test_registry_extra.py  test_semantic.py  test_session_async.py  test_session_sync.py
