[project]
name = "ontosql"
version = "0.1.0"
description = "Semantic interoperability for SQLModel — JSON-LD and RDF export with ontology-aware fields (import ontosql)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "OntoSQL Contributors" }]
keywords = ["sqlmodel", "json-ld", "rdf", "ontology", "semantic-web", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "sqlmodel>=0.0.14",
    "rdflib>=7.0.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100", "orjson>=3.9"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pytest-xdist>=3.8",
    "ty>=0.0.37",
    "ruff>=0.4",
    "httpx>=0.27",
    "fastapi>=0.100",
    "orjson>=3.9",
]

[project.urls]
Homepage = "https://github.com/eddiethedean/ontosql"
Documentation = "https://github.com/eddiethedean/ontosql#readme"
Repository = "https://github.com/eddiethedean/ontosql"
Issues = "https://github.com/eddiethedean/ontosql/issues"
Changelog = "https://github.com/eddiethedean/ontosql/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ontosql"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/examples", "/docs"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["src/ontosql"]

[tool.ty.analysis]
replace-imports-with-any = ["rdflib.**", "sqlmodel.**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["ontosql"]
branch = true

[tool.coverage.report]
omit = [
    "src/ontosql/__init__.py",
    "src/ontosql/fastapi/__init__.py",
]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
